src/test/deca/context/invalid/created/decl_type_String.deca
{
String a; //String n'est pas un type reconnu pour la declaration de variable
}